--- a/app/src/main/res/layout/activity_view_status.xml
+++ b/app/src/main/res/layout/activity_view_status.xml
@@ -1,99 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/colorPrimaryDark"
+    android:orientation="vertical"
     tools:context="com.sdsmdg.skipthequeue.ViewStatusActivity">
 
     <TextView
         android:id="@+id/delete_token_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="I won't go, delete my token"
-        android:textSize="18sp"
-        android:textColor="@color/colorPrimary"
-        android:visibility="visible"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="10dp"
         android:gravity="center_horizontal"
         android:onClick="deleteTokenOnClick"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="10dp"/>
+        android:text="I won't go, delete my token"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/out_of_cash"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Report out of cash"
-        android:textSize="18sp"
         android:layout_above="@id/delete_token_textview"
-        android:textColor="@color/colorPrimary"
-        android:visibility="visible"
         android:gravity="center_horizontal"
-        android:onClick="reportOFC" />
+        android:onClick="reportOFC"
+        android:text="Report out of cash"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        android:visibility="visible" />
 
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/use_token_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/colorPrimary"
         android:layout_above="@id/out_of_cash"
+        android:layout_centerHorizontal="true"
         android:layout_margin="10dp"
-        android:visibility="visible"
-        android:paddingLeft="30dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingRight="30dp"
+        android:backgroundTint="@color/colorPrimary"
         android:onClick="useTokenOnClick"
-        fancy:fb_textColor="@color/colorPrimaryDark"
+        android:paddingBottom="10dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:paddingTop="10dp"
+        android:visibility="visible"
+        fancy:fb_radius="30dp"
         fancy:fb_text="Use Token"
-        fancy:fb_radius="30dp"/>
+        fancy:fb_textColor="@color/colorPrimaryDark" />
 
     <LinearLayout
         android:id="@+id/ticket_layout"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/use_token_button"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:background="@drawable/ticket"
         android:orientation="vertical"
-        android:layout_above="@id/use_token_button"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:paddingTop="40dp">
 
         <TextView
+            android:id="@+id/your_queue_no_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
             android:layout_gravity="center_horizontal"
             android:text="You no. in queue is"
+            android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
-            android:textAlignment="center" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/token_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="#52"
-            android:textSize="80sp"
-            android:textColor="#000000"
             android:layout_gravity="center_horizontal"
-            android:textAlignment="center" />
+            android:text="#52"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="80sp" />
 
         <TextView
+            android:id="@+id/user_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Expected time : 45 min"
-            android:textSize="18sp"
-            android:textColor="#000000"
             android:layout_gravity="center_horizontal"
             android:gravity="center"
-            android:id="@+id/user_time" />
+            android:text="Expected time : 45 min"
+            android:textColor="#000000"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
@@ -104,13 +105,13 @@
         android:id="@+id/thank_you_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Thank you for using our service!"
-        android:gravity="center_horizontal"
-        android:textSize="18sp"
-        android:visibility="invisible"
-        android:layout_centerHorizontal="true"
-        android:textColor="@color/colorPrimary"
         android:layout_below="@id/ticket_layout"
-        android:layout_margin="30dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_margin="30dp"
+        android:gravity="center_horizontal"
+        android:text="Thank you for using our service!"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        android:visibility="invisible" />
 
 </RelativeLayout>
