--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -16,32 +16,6 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/restaurant_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="125dp"
-            android:layout_marginStart="43dp"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/restaurant_icon"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:src="@drawable/restaurant_icon" />
-
-            <TextView
-                android:textColor="#ffffff"
-                android:id="@+id/restaurant_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Restaurant"
-                android:layout_gravity="center_horizontal"/>
-
-        </LinearLayout>
-
-        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="26dp"
@@ -62,6 +36,63 @@
                 android:layout_height="wrap_content"
                 android:text="Movies"
                 android:textColor="#ffffff"
+                android:layout_marginTop="10dp"
+                android:textSize="18sp"
+                android:layout_gravity="center_horizontal"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/atm_container"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/restaurant_container"
+            android:layout_marginTop="68dp">
+
+            <ImageView
+                android:id="@+id/atm_icon"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/atm_icon" />
+
+            <TextView
+                android:id="@+id/atm_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Atm"
+                android:textColor="#ffffff"
+                android:layout_marginTop="10dp"
+                android:textSize="18sp"
+                android:layout_gravity="center_horizontal"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/restaurant_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="46dp"
+            android:layout_marginBottom="82dp">
+
+            <ImageView
+                android:id="@+id/restaurant_icon"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/restaurant_icon" />
+
+            <TextView
+                android:textColor="#ffffff"
+                android:id="@+id/restaurant_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Restaurant"
+                android:layout_marginTop="10dp"
+                android:textSize="18sp"
                 android:layout_gravity="center_horizontal"/>
 
         </LinearLayout>
@@ -86,32 +117,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:textColor="#ffffff"
+                android:layout_marginTop="10dp"
+                android:textSize="18sp"
                 android:text="Tickets" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/atm_container"
-            android:layout_marginBottom="131dp"
-            android:layout_above="@+id/restaurant_container"
-            android:layout_alignStart="@+id/restaurant_container">
-
-            <ImageView
-                android:id="@+id/atm_icon"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:src="@drawable/atm_icon" />
-
-            <TextView
-                android:id="@+id/atm_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Atm"
-                android:textColor="#ffffff"
-                android:layout_gravity="center_horizontal"/>
 
         </LinearLayout>
 
